fixed overlap

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -394,7 +394,7 @@ iframe{
 	.current_projects_div{
 		height: $vertical-measure * 20;
 		border-width: medium;
-	  padding: 4em 1em 4em 1em; 
+	  padding: 3em 1em 8em 1em; 
 	  background-color: #fff;
 
 
